--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -3,9 +3,9 @@ name: deploy-auth
 on:
   push:
     branches:
-      - main
+      - master
     paths:
-      - 'packages/auth/**'
+      - "packages/auth/**"
 
 defaults:
   run:
