--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -3,9 +3,9 @@ name: deploy-marketing
 on:
   push:
     branches:
-      - main
+      - master
     paths:
-      - 'packages/marketing/**'
+      - "packages/marketing/**"
 
 defaults:
   run:
