--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,12 +2,15 @@
   "name": "auth",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js"
+    "start": "webpack serve --open --config config/webpack.dev.js",
+    "start-live": "webpack serve --open --config config/webpack.dev.js --live-reload --hot",
+    "build": "webpack --config config/webpack.prod.js",
+    "build:start": "cd dist && PORT=9001 npx serve"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^1.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
@@ -18,10 +21,14 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "autoprefixer": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.2",
     "webpack": "^5.88.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^4.7.4",
