--- a/packages/caryfy/package.json
+++ b/packages/caryfy/package.json
@@ -11,11 +11,15 @@
     "@apollo/client": "^3.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.6.2",
     "graphql": "^16.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
