--- a/packages/caryfy/package.json
+++ b/packages/caryfy/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "caryfy",
+  "name": "CaryFyAI",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "webpack serve --open --config config/webpack.dev.js ",
     "start-live": "webpack serve --open --config config/webpack.dev.js --live-reload --hot",
@@ -11,32 +12,73 @@
     "@apollo/client": "^3.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.6.2",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "moment": "^2.29.4",
+    "prettier": "^2.7.1",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
-    "autoprefixer": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "autoprefixer": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.3.0",
     "tailwindcss": "^2.0.2",
     "webpack": "^5.88.0",
-    "webpack-cli": "^4.1.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.2.0"
   }
