--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CaryFyAI",
+  "name": "CogentInfoMedia",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,32 +9,31 @@
     "build:start": "cd dist && PORT=9001 npx serve"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.7",
+    "@apollo/client": "^3.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.23",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
-    "axios": "^1.6.2",
-    "react": "^18.2.0",
+    "react": "^17.0.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1",
-    "typescript": "^4.8.4"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5"
   },
   "eslintConfig": {
     "extends": [
