--- a/packages/container/tsconfig.json
+++ b/packages/container/tsconfig.json
@@ -1,8 +1,14 @@
+
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "target": "ES5",
+    "module": "ES6",
+    "strict": true,
     "jsx": "react",
-    "esModuleInterop": true
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"]
 }
