--- a/packages/caryfy/package.json
+++ b/packages/caryfy/package.json
@@ -12,27 +12,12 @@
     "@apollo/client": "^3.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.0.3",
-    "@types/react": "^12.1.2",
-    "@types/react-dom": "^12.1.2",
-    "apollo-boost": "^0.4.9",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-http": "^1.5.17",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
     "moment": "^2.29.4",
-    "prettier": "^2.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5"
+    "react-router-dom": "^5.2.0"
   },
   "eslintConfig": {
     "extends": [
@@ -76,6 +61,17 @@
     "postcss-loader": "^4.1.0",
     "style-loader": "^3.3.0",
     "tailwindcss": "^2.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.5.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "webpack": "^5.88.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4",
