--- a/packages/caryfy/tsconfig.json
+++ b/packages/caryfy/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "ES6",
+    "jsx": "react-jsx", // or "react-jsx" for React 17+
+    "module": "esnext",
+    "target": "es5",
+    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
-    "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
