--- a/packages/caryfy/tsconfig.json
+++ b/packages/caryfy/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx", // or "react-jsx" for React 17+
-    "module": "esnext",
-    "target": "es5",
-    "allowJs": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "target": "ES5",
+    "module": "ESNext",
     "strict": true,
-    "moduleResolution": "node",
+    "jsx": "react-jsx", // or "react-jsx" for React 17+
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
