--- a/packages/container/tsconfig.json
+++ b/packages/container/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "module": "ES6",
+    "module": "ESNext",
     "strict": true,
-    "jsx": "react",
-    "moduleResolution": "node",
+    "jsx": "react-jsx", // or "react-jsx" for React 17+
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
