--- a/packages/caryfy/package.json
+++ b/packages/caryfy/package.json
@@ -55,6 +55,8 @@
     "autoprefixer": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
+    "url-loader": "^4.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
