--- a/packages/caryfy/package.json
+++ b/packages/caryfy/package.json
@@ -51,23 +51,30 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
-    "babel-loader": "^8.1.0",
-    "autoprefixer": "^10.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.0",
-    "url-loader": "^4.1.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.2.1",
-    "postcss-loader": "^4.1.0",
-    "style-loader": "^3.3.0",
-    "tailwindcss": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/dom": "^7.21.4",
+    "@types/jest": "^29.0.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "prettier": "^2.7.1",
+    "style-loader": "^3.3.0",
+    "tailwindcss": "^2.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.5.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4",
